--- a/Esami/Esame_2022_02_10/Esercizio2.css
+++ b/Esami/Esame_2022_02_10/Esercizio2.css
@@ -1,110 +1,101 @@
-* {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-html, body {
-    width: 100vw;
-    height: 100vh;
-    padding: 0;
+html {
+    max-width: 100vw;
+    max-height: 100vh;
     margin: 0;
-    padding-left: 1rem;     
+    padding: 0;
     overflow-x: hidden;
 }
 
-body>div {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-body>div>header {
+body>nav {
     position: fixed;
     display: flex;
     width: 100%;
     height: auto;
     padding: 0.25rem;
-    top: 0;
-    left: 0;
-    background-color: grey;
+    gap: 0.25rem;
+    color: white;
+    background-color: rgb(0, 0, 0, 0.7);
 }
 
-body>div>header>img {
+img {
     width: 50px;
     height: 25px;
     margin-top: auto;
     margin-bottom: auto;
 }
 
-body>div>header>p {
-    margin-left: 0.5rem;
-    color: white;
+body>div:nth-of-type(1) {
+    width: 100%;
+    padding-top: 3rem;
+    padding-left: 0.5rem;
 }
 
 h1 {
-    margin-top: 5rem;
+    padding: 0.25rem;
+    border-bottom: 2px solid black;
 }
 
-body>div>div {
-    width: 100%;
-    height: auto;
-    border-top: 2px solid black;
+body>div:nth-of-type(2) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    padding-left: 0.5rem
 }
 
-body>div>div>div:nth-child(1) {
+body>div:nth-of-type(2)>div:nth-of-type(1) {
     grid-column: 1 / span 2;
-    grid-row: auto;
 }
 
-body>div>div>div:nth-child(1)>div {
-    border-bottom: 2px solid lightgrey;
+body>div:nth-of-type(2)>div:nth-of-type(1)>div {
+    padding: 0.5rem;
+    border-bottom: 1px solid grey;
 }
 
-body>div>div>div:nth-child(1)>div>p:nth-child(1) {
+body>div:nth-of-type(2)>div:nth-of-type(1)>div>span {
+    font-size: 12pt;
     color: grey;
-}
-
-body>div>div>div:nth-child(1)>div>p:nth-child(2) {
-    width: 75%;
-    font-size: 14pt;
-    font-weight: bold;
-    color: blue;
-}
-
-body>div>div>div:nth-child(2) {
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    grid-column: 3 / span 3;
-    grid-row: auto;
-    border-left: 2px solid lightgrey;
 }
 
 a {
     text-decoration: none !important;
-    color: darkgrey;
 }
 
-body>div>div>div:nth-child(2)>div {
-    width: 65%;
-    margin: auto;
-    margin-top: 2rem;
-    padding: 0.75rem;
-    background-color: lightblue;
-    border: 2px solid lightskyblue;
+body>div:nth-of-type(2)>div:nth-of-type(1)>div>a>p {
+    font-size: 16pt;
+    font-weight: bold;
 }
 
-body>div>div>div:nth-child(2)>a>div {
-    width: 65%;
-    margin: auto;
+body>div:nth-of-type(2)>div:nth-of-type(2) {
+    grid-column: 3;
+    padding: 1rem;
+    border-left: 1px solid grey;
+}
+
+body>div:nth-of-type(2)>div:nth-of-type(2)>a>div {
+    background-color: rgb(173, 216, 230, 0.5);
+    border: 2px solid grey;
+    padding: 1rem;
     margin-top: 2rem;
-    padding: 0.75rem;
-    background-color: lightblue;
-    border: 2px solid lightskyblue;
 }
 
 h2 {
-    text-w;
+    color: blue;
+}
+
+body>div:nth-of-type(2)>div:nth-of-type(2)>a>div>p {
+    font-size: 14pt;
+    color: grey;
+}
+
+body>div:nth-of-type(2)>p {
+    font-size: 14pt;
+    font-weight: bold;
     color: blue;
 }
