--- a/Esami/Esame_2022_01_18/Esercizio2.css
+++ b/Esami/Esame_2022_01_18/Esercizio2.css
@@ -5,93 +5,93 @@ body, html {
     margin: 0;
 }
 
-body>div {
+body>div{
     position: relative;
-    max-width: 100%;
-    height: 100%;
-    padding: 2rem;
-}
-
-body>div>div:nth-child(1) {
-    text-align: center;
-    width: 60%;
-    height: 2.3rem;
-    margin: auto;
-}
-
-body>div>div:nth-child(1)>span {
-    padding: 1rem 2rem 1rem 2rem;
-    margin-right: 1rem;
-    font-size: 14pt;
-    font-weight: bold;
-    color: white;
-    background-color: lightgrey;
-}
-
-body>div>div:nth-child(1)>span:hover {
-    background-color: grey;
-}
-
-body>div>div:nth-child(2) {
-    width: 60%;
-    padding: 1.75rem;
-    margin: auto;
-    font-size: 14pt;
-    border: 2px solid black;
-}
-
-body>div>div:nth-child(2)>span {
-    font-style: italic;
-}
-
-body>div>div:nth-child(2)>div {
+    width: 100%;
+    padding-top: 1rem;
     margin-top: 1rem;
 }
 
-body>div>div:nth-child(2)>div:nth-child(3) {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
+body>div>nav {
+    text-align: center;
+    width: 75%;
+    height: 37.5px;
+    margin: auto;
 }
 
-body>div>div:nth-child(2)>div:nth-child(3)>div {
+body>div>nav>a {
+    padding: 1rem 2rem 1rem 2rem;
+    font-size: 14pt;
+    color: white;
+    background-color: lightgrey;
+    margin: 1rem;
+}
+
+body>div>nav>a:hover {
+    background-color: grey;
+}
+
+body>div>div {
+    max-width: 75%;
+    max-height: 35%;
+    padding-top: 1rem;
+    padding: 2rem;
+    margin: auto;
+    border: 2px solid black;
+}
+
+body>div>div>span {
+    font-size: 16pt;
+    font-style: italic;
+}
+
+body>div>div>div:nth-of-type(1) {
+    display: flex;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+body>div>div>div:nth-of-type(2) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     width: 100%;
     height: 100%;
+    gap: 1rem;
+}
+
+body>div>div>div:nth-of-type(2)>div {
+    width: 100%;
+    height: 100%;
+}
+
+body>div>div>div:nth-of-type(2)>div>p {
     text-align: justify;
-}
-
-body>div>div:nth-child(2)>div:nth-child(3)>div>div {
-    margin-right: 1rem;
-}
-
-body>div>div:nth-child(2)>div:nth-child(3)>div>div>p {
+    padding: 2rem;
     background-color: lightgrey;
-    padding: 0.5rem;
 }
 
-body>div>div:nth-child(2)>div:nth-child(3)>div>div>p>img {
-    float: right;
-    max-width: 25%;
-    max-height: 25%;
-    margin-left: 0.5rem;
-    margin-bottom: 0.25rem;
-}
-
-body>div>div:nth-child(2)>div:nth-child(3)>span {
-    text-align: center;
-    color: grey;
-    font-style: italic;
-}
-
-body>div>div:nth-child(2)>div:nth-child(3)>div>div>p>a {
+body>div>div>div:nth-of-type(2)>div>p>a {
     text-decoration: none !important;
     color: black;
 }
 
-a {
-    color: blue;
+img {
+    float: right;
+    width: 15%;
+    height: 15%;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-style: italic;
+    color: grey;
+}
+
+footer>span {
+    margin-top: 1rem;
 }
