--- a/Esami/Esame_2021_06_24/Esercizio2.css
+++ b/Esami/Esame_2021_06_24/Esercizio2.css
@@ -11,75 +11,74 @@ body>div {
     height: auto;
 }
 
-body>div:first-child>div {
-    width: 50%;
-    height: auto;
-    padding: 2rem;
+body>div>div {
+    width: 35%;
+    padding: 1rem;
     margin: auto;
-    border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 15px;
+    border: 2px solid black;
 }
 
 table {
+    text-align: center;
     width: 100%;
-    margin: auto;
 }
 
-tr:nth-of-type(2), tr:nth-of-type(3) {
-    background-color: lightgreen;
-}
-
-tr:nth-of-type(4) {
-    background-color: red;
-}
-
-#re-true {
-    background-color: lightgreen;
-}
-
-#tr-false {
-    background-color: red;
-}
-
-th {
-    padding: 0.5rem;
+table>thead>tr>th {
+    padding: 1rem;
     color: white;
     background-color: black;
 }
 
-td {
-    text-align: center;
-    padding: 0.25rem;
+table>tbody>tr>td {
+    padding: 1rem;
     border: 1px solid black;
 }
 
-body>div:first-child>div>div {
+table>tbody>tr:nth-of-type(1), table>tbody>tr:nth-of-type(2) {
+    background-color: lightgreen;
+}
+
+table>tbody>tr:nth-of-type(3) {
+    background-color: rgb(255, 0, 0, 0.5);
+} 
+
+body>div>div>div:nth-of-type(1) {
     display: grid;
-    grid-template-columns: 25% 35%;
-    grid-template-rows: 1fr 1fr 1fr;
-    width: 50%;
-    gap: 0.25rem;
+    grid-template-columns: 20% 80%;
+    gap: 1rem;
 }
 
 label {
+    font-size: 14pt;
     font-weight: bold;
     font-style: italic;
 }
 
-body>div:nth-child(2) {
-    width: auto;
+select, input {
+    width: 20%;
+}
+
+button {
+    margin-top: 1rem;
+}
+
+body>div>div>div:nth-of-type(2) {
     position: absolute;
+    top: 22.5rem;
+    left: 70rem;
     padding: 0.1rem;
-    left: 75rem;
-    top: 17.5rem;
-    font-size: 20pt;
-    transform: rotate(10deg);
-    color: red;
-    font-weight: bold;
+    border: 1px solid red;
+    rotate: 17.5deg;
+}
+
+body>div>div>div:nth-of-type(2)>div {
+    padding: 1rem;
     border: 1px solid red;
 }
 
-body>div:nth-child(2)>div {
-    padding: 1rem;
-    border: 1px solid red;
+span {
+    font-size: 20pt;
+    font-weight: bold;
+    color: red;
 }
