--- a/Esami/Esame_2021_06_03/Esercizio2.css
+++ b/Esami/Esame_2021_06_03/Esercizio2.css
@@ -1,67 +1,102 @@
-body {
-    width: 100%;
-    height: 100%;
+body, html {
+    max-width: 100vw;
+    max-height: 100vh;
+    padding: 0;
+    margin: 0;
 }
 
-.container {
-    width: 100%;
-    height: 100%;
-}
-
-#div-hotel {
+body>div {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    position: relative;
     width: 100%;
     height: auto;
 }
 
-#div-hotel div {
-    display: inline-block;
-    text-align: center;
-    width: 25%;
-    border: 2px solid black;
-    border-radius: 20px;
-}
-
-#div-hotel div:hover {
-    background-color: lightyellow;
-}
-
-img {
-    width: 150px;
-    height: 150px;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-p {
-    text-align: right;
-    width: 90%;
+body>div>div:nth-of-type(1) {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
     margin: auto;
-    margin-bottom: 1rem;
-    padding: 5px;
-    background-color: grey;
-    border-radius: 10px;
+    padding: 1rem;
+}
+
+body>div>div:nth-of-type(1)>div:nth-of-type(1) {
+    text-align: center;
+    width: 50%;
+    padding: 1rem;
+    border-radius: 20px;
+    border: 1px solid black;
+}
+
+body>div>div:nth-of-type(1)>div:nth-of-type(2) {
+    text-align: center;
+    width: 50%;
+    padding: 1rem;
+    border-radius: 20px;
+    border: 1px solid black;
+}
+
+body>div>div:nth-of-type(1)>div:hover {
+    background-color: lightyellow;
 }
 
 span {
     font-weight: bold;
 }
 
-#div-form {
+p {
+    text-align: right;
+    padding: 0.5rem;
+    font-size: 14pt;
+    background-color: lightgrey;
+    border-radius: 15px;
+}
+
+img {
+    width: 150px;
+    height: 150px;
+}
+
+body>div>div:nth-of-type(2) {
     text-align: center;
-    width: 100%;
-    height: auto;
+    margin: auto;
+    width: 50%;
+}
+
+body>div>div:nth-of-type(2)>div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 25%;
+    margin: auto;
 }
 
 textarea {
-    width: 500px;
-    height: 100px;
+    width: 45%;
+    height: 75px;
 }
 
-#div-form div {
-    width: 25%;
-    margin: auto;
-    margin-top: 1rem;
+button {
+    width: 25%
+}
+
+@media print {
+    body {
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+    body>div>div:nth-of-type(2) {
+        visibility: hidden;
+    }
+
+    /* <--> */
+    body>div>div:nth-of-type(1)>div:nth-of-type(1) {
+        border-radius: 0px;
+    }
+    
+    /* <--> */
+    body>div>div:nth-of-type(1)>div:nth-of-type(2) {
+        border-radius: 0px;
+    }
 }
