--- a/Esercizi_Lecture/Esercizi_Lect6/Esercizio1.css
+++ b/Esercizi_Lecture/Esercizi_Lect6/Esercizio1.css
@@ -1,109 +1,107 @@
 body, html {
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
     padding: 0;
-    margin: 0;
-    font-size: 13pt;
+    margin: 0; 
+    font-family: 'Courier New', Cou rier, monospace;
+    background-color: lightyellow;
 }
 
 body>div {
     display: flex;
-    flex: row;
-    width: 75vw;
-    padding: 1rem;
+    flex-direction: row;
+    width: 75%;
     margin: auto;
-    margin-top: 2rem;
-    background-color: lightyellow;
+    padding: 1rem;
+    padding-bottom: 5rem;
+    gap: 1rem;
 }
 
-body>div>div:first-child {
-    width: 60%;
-    margin-left: 5%;
-    margin-right: 5%;
+body>div>div:nth-of-type(1) {
+    max-width: 60%;
+    margin: auto;
 }
 
 h2 {
     color: green;
 }
 
-body>div>div:first-child>p {
-    font-size: 13pt;
+p, label {
     color: grey;
 }
 
 a {
+    width: auto;
     color: fuchsia;
-    text-decoration: underline;
 }
 
 a:hover {
-    width: auto;
     background-color: yellow;
 }
 
 table {
-    text-align: left;
     width: 100%;
 }
 
-table>thead>tr>th {
-    padding: 0.25rem;
+table>thead>tr {
     color: white;
-    background-color: black;
+    background-color: rgb(0, 0, 0, 0.7);
+}
+
+table>thead>tr>td {
+    padding: 0.5rem;
 }
 
 table>tbody>tr>td {
     padding: 0.25rem;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid black;
 }
 
-span {
-    color: grey;
-}
-
-body>div>div:first-child>div {
+body>div>div:nth-of-type(1)>div {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2vh 10vh 2vh;
-    width: 100%;
+    grid-template-columns: 20% 40%;
+    grid-template-rows: 1fr;
     gap: 1rem;
 }
 
 button {
     float: right;
-    padding: 0.25rem 1rem 0.25rem 1rem;
-    margin-top: 1rem;
+    padding: 0.5rem 2rem 0.5rem 2rem;
     color: white;
-    background-color: green;
     border: none !important;
+    background-color: green;
 }
 
-body>div>div:nth-child(2) {
+body>div>div:nth-of-type(2) {
     width: 25%;
-    margin-left: 5%;
-    margin-right: 5%;
 }
-    
-body>div>div:nth-child(2)>p {
+
+body>div>div:nth-of-type(2)>div {
+    width: 100%;
+}
+
+body>div>div:nth-of-type(2)>div>p {
     display: flex;
     flex-direction: column;
 }
 
-body>div>div:nth-child(2)>p>span:nth-child(1) {
-    font-size: 14pt;
+body>div>div:nth-of-type(2)>div>p>span:nth-of-type(1) {
+    margin-bottom: 0.25rem;
+    font-weight: bold;
     color: green;
 }
 
-body>div>div:nth-child(2)>p>span:nth-child(2) {
-    color: black;
+body>div>div:nth-of-type(2)>div>p>span:nth-of-type(2) {
+    margin-bottom: 1rem;
     font-style: italic;
+    color: black;
 }
 
-body>div>div:nth-child(2)>p>span:nth-child(3) {
+body>div>div:nth-of-type(2)>div>p>span:nth-of-type(4) {
     margin-top: 1rem;
 }
 
 img {
-    width: 75%;
-    height: auto;
+    width: 250px;
+    height: 250px;
 }
