--- a/Esami/Esame_2021_01_02/Esercizio2.css
+++ b/Esami/Esame_2021_01_02/Esercizio2.css
@@ -1,48 +1,67 @@
-html, body {
-    width: 100vw;
-    height: 100vh;
+body, html {
+    max-width: 100vw;
+    max-height: 100vh;
     padding: 0;
     margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.container {
-    width: 100vw;
-    height: auto;
-}
-
-.container>div {
-    text-align: center;
-    width: 50vw;
-    height: auto;
-    margin: auto;
-}
-
-img {
-    border: none !important;
-}
-
-p {
-    margin: auto;
-    width: 75%;
-}
-
-fieldset {
-    width: 100%;
-    text-align: left
-}
-
-fieldset>div {
-    width: 100%;
+body>div {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding-top: 1rem;
 }
 
-fieldset>div>div:nth-child(1) {
-    text-align: right;
+body>div>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 50%;
 }
 
-fieldset>div>div:nth-child(2) {
+body>div>div>span {
+    font-size: 16pt;
+    font-weight: bold;
+}
+
+body>div>div>p {
+    text-align: center;
+    width: 75%;
+}
+
+body>div>div>fieldset {
     width: 100%;
-    padding-left: 1rem;
+}
+
+label {
+    font-size: 14pt;
+}
+
+body>div>div>fieldset>div {
+    display: grid;
+    grid-template-columns: 35% 60%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 0.5rem;
+}
+
+body>div>div>fieldset>div>label {
+    text-align: right;
+}
+
+input {
+    width: 40%;
+}
+
+select {
+    width: 20%
+}
+
+#fieldset-menu-mare, #fieldset-menu-terra {
+    margin-top: 1rem;
+} 
+
+#fieldset-menu-mare>div, #fieldset-menu-terra>div {
+    display: flex;
+    flex-direction: column;
 }
