--- a/Esami/Esame_2023_01_02/Esercizio1.css
+++ b/Esami/Esame_2023_01_02/Esercizio1.css
@@ -1,81 +1,86 @@
-html, body {
-    min-width: 100vw;
-    min-height: 100vh;
+body, html {
+    max-width: 100vw;
+    max-height: 100vh;
     padding: 0;
     margin: 0;
 }
 
-body>div:nth-child(1) {
-    max-width: 100vw;
-    max-height: 100vh;
-}
-
-body>div:nth-child(1)>div {
-    width: 50vw;
-    height: auto;
-    padding: 2rem;
-    margin: auto;
-    border: 2px solid black;
-    border-radius: 15px;
-}
-
-body>div:nth-child(1)>div>table {
-    text-align: center;
+body>div {
+    position: relative;
     width: 100%;
+    height: auto;
+    padding: 1rem;
 }
 
-th, td {
-    padding: 0.5rem;
-    font-size: 14pt;
+body>div>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    width: 35%;
+    margin: auto;
+    border-radius: 15px;
     border: 2px solid black;
 }
 
-tr:nth-child(1) {
+table {
+    width: 100%;
+    font-size: 14pt;
+}
+
+table>thead>tr>th {
+    text-align: center;
+    padding: 1rem;
     color: white;
     background-color: black;
 }
 
-tr:nth-child(2), tr:nth-child(3) {
+table>tbody>tr>td {
+    text-align: center;
+    padding: 0.5rem;
+    border: 1px solid black;
+}
+
+table>tbody>tr:nth-of-type(1)>td, table>tbody>tr:nth-of-type(2)>td {
     background-color: lightgreen;
 }
 
-tr:nth-child(4) {
+table>tbody>tr:nth-of-type(3)>td {
     background-color: red;
 }
 
-body>div:nth-child(1)>div>div {
+body>div>div>div:nth-of-type(1) {
+    text-align: left;
+    width: 100%;
+}
+
+body>div>div>div:nth-of-type(1)>div {
     display: grid;
-    grid-template-columns: 250px 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 30% 30%;
+    gap: 0.25rem;
 }
 
-body>div:nth-child(1)>div>div>div {
-    margin-top: 0.25rem;
-}
-
-label {
-    font-size: 16pt;
+body>div>div>div:nth-of-type(1)>div>label {
+    font-size: 14pt;
     font-weight: bold;
-    font-style: italic;
 }
 
-body>div:nth-child(2) {
+body>div>div>div:nth-of-type(2) {
     position: absolute;
-    padding: 0.10rem;
-    right: 35rem;
-    top: 17.5rem;
-    border: 2px solid red;
-    transform: rotate(15deg);
+    top: 27.5rem;
+    left: 75rem;
+    rotate: 25deg;
+    padding: 0.1rem;
+    border: 1px solid red;
 }
 
-body>div:nth-child(2)>div {
-    padding: 1rem;
-    border: 2px solid red;
+body>div>div>div:nth-of-type(2)>div {
+    padding: 0.25rem;
+    border: 1px solid red;
 }
 
-body>div:nth-child(2)>div>label {
-    font-size: 24pt;
-    font-style: normal;
+span {
+    font-size: 27pt;
+    font-weight: bold;
     color: red;
 }
-
