--- a/Esami/Esame_2023_09_07/Esercizio2.css
+++ b/Esami/Esame_2023_09_07/Esercizio2.css
@@ -1,166 +1,207 @@
 body, html {
-    max-width: 100vw;
-    max-height: 100vh;
-    padding: 0;
-    margin: 0;
-    font-family: 'Courier New', Courier, monospace;
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	font-family: sans-serif;
 }
 
 body>div {
-    display: flex;
-    max-width: 100vw;
-    max-height: 100vh;
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 100%;
 }
 
 body>div>div:nth-of-type(1) {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-    height: 100vh;
-    padding: 1rem ;
-    color: white;
-    font-size: 14pt;
-    background-color: black;   
+	width: 20%;
+	min-height: 100%;
+	padding: 1rem;
+	color: white;
+	background-color: black;
 }
 
-body>div>div:nth-of-type(1)>p:nth-of-type(1) {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    gap: 1rem;
+body>div>div:nth-of-type(1)>div:nth-of-type(1) {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 100%;
+	gap: 1rem;
 }
 
-body>div>div:nth-of-type(1)>p:nth-of-type(1)>span:first-child {
-    text-align: center;
-    width: 80%;
-    border-radius: 10px;
-    border: 2px solid rgb(128, 128, 128, 0.5);
+body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(1) {
+	width: 80%;
+	padding: 1rem;
+	border-radius: 5px;
+	border: 2px solid lightgrey;
+	overflow-y: scrollable;
 }
 
-body>div>div:nth-of-type(1)>p:nth-of-type(1)>span:nth-of-type(2) {
-    text-align: center;
-    width: 10%;
-    border-radius: 10px;
-    border: 2px solid rgb(128, 128, 128, 0.5);
+body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(2) {
+	width: 10%;
+	padding: 0.75rem;
+	border-radius: 5px;
+	border: 2px solid lightgrey;
 }
 
-body>div>div:nth-of-type(1)>p:nth-of-type(1)>p {
-    display: flex;
-    flex-direction: row;
+body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(2)>img {
+	width: 75%;
+	height: 75%;
+	filter: invert(100%);
 }
 
-body>div>div:nth-of-type(1)>span:nth-of-type(1) {
-    padding: 1rem;
-    color: grey;
+body>div>div:nth-of-type(1)>div:nth-of-type(2) {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	gap: 1rem;
+	padding: 2rem;
+	font-size: 14pt;
 }
 
-body>div>div:nth-of-type(1)>p:nth-of-type(2) {
-    display: flex;
-    flex-direction: column;
-    padding: 0.25rem;
-    font-size: 16pt;
+body>div>div:nth-of-type(1)>div:nth-of-type(2)>span {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 100%;
+	gap: 1rem;
 }
 
-body>div>div:nth-of-type(1)>p:nth-of-type(2)>span {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+body>div>div:nth-of-type(1)>div:nth-of-type(2)>span>img {
+	width: 7.5%;
+	filter: invert(100%);
 }
 
-body>div>div:nth-of-type(1)>p>span {
-    padding: 1rem;
+body>div>div:nth-of-type(1)>div:nth-of-type(3) {
+	position: absolute;
+	width: 100%;
+	padding: 1rem;
+	font-size: 14pt;
+	bottom: 0;
+	border-top; 2px solid grey;
 }
 
-img {
-    width: 35px;
-    height: 35px;
+body>div>div:nth-of-type(1)>div:nth-of-type(3)>span {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 100%;
+	margin-top: 1rem;
 }
 
-/* <--> */
-body>div>div:nth-of-type(1)>p:nth-of-type(2)>span>img {
-    filter: invert(100%); 
+body>div>div:nth-of-type(1)>div:nth-of-type(3)>span>img {
+	width: 2%;
+	padding-right: 1rem;
+	filter: invert(100%);
 }
 
-body>div>div:nth-of-type(1)>p:nth-of-type(3) {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    width: 18%;
-    bottom: 0.5rem;
-    padding: 1rem;
-    border-top: 1px solid grey;
-}
-body>div>div:nth-of-type(1)>p:nth-of-type(3)>span:nth-of-type(2) {
-    padding: 2rem;
-    font-weight: bold;
+body>div>div:nth-of-type(1)>div:nth-of-type(3)>span:nth-of-type(2) {
+	padding-left: 1rem;
 }
 
 body>div>div:nth-of-type(2) {
-    width: 80%;
+	width: 80%;
+	height: 100%;
 }
 
-body>div>div:nth-of-type(2)>p:first-child {
-    text-align: center;
-    padding: 2rem;
+body>div>div:nth-of-type(2)>div:nth-of-type(1) {
+	width: 100%;
+	padding: 2rem;
+	background-color: white;
+	border-bottom: 1px solid lightgrey;
 }
 
-body>div>div:nth-of-type(2)>p:nth-of-type(2), body>div>div:nth-of-type(2)>p:nth-of-type(3), body>div>div:nth-of-type(2)>p:nth-of-type(4), body>div>div:nth-of-type(2)>p:nth-of-type(5) {
-    display: flex;
-    align-items: center;
-    max-width: 100%;
-    padding: 3rem;
-    padding-left: 4rem;
-    margin: auto;
-    border: 1px solid rgb(128, 128, 128, 0.2);
+body>div>div:nth-of-type(2)>div:nth-of-type(1)>span {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	width: 80%;
+	margin: auto;
 }
 
-body>div>div:nth-of-type(2)>p:nth-of-type(2), body>div>div:nth-of-type(2)>p:nth-of-type(4) {
-    background-color: white;
+body>div>div:nth-of-type(2)>div:nth-of-type(1)>span>img {
+	width: 2.5%;
+	padding-left: 5rem;
 }
 
-body>div>div:nth-of-type(2)>p:nth-of-type(3), body>div>div:nth-of-type(2)>p:nth-of-type(5) {
-    background-color: rgb(128, 128, 128, 0.2);
+body>div>div:nth-of-type(2)>div:nth-of-type(2) {
+	width: 100%;
+	padding: 2rem;
+	background-color: white;
 }
 
-body>div>div:nth-of-type(2)>p>img {
-    padding-right: 1rem;
+body>div>div:nth-of-type(2)>div:nth-of-type(2)>span {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 80%;
+	margin: auto;
 }
 
-body>div>div:nth-of-type(2)>div {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
-    width: 80%;
-    bottom: 5rem;
-    gap: 1rem;
+body>div>div:nth-of-type(2)>div:nth-of-type(3) {
+	width: 100%;
+	padding: 2rem;
+	background-color: lightgrey;
+	opacity: 0.8;
 }
 
-body>div>div:nth-of-type(2)>div>span {  
-    display: flex;
-    align-items: center;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    gap: 1rem;
-    background-color: white;
-    border-radius: 10px;
-    border: 1px solid lightgrey;
+body>div>div:nth-of-type(2)>div:nth-of-type(3)>span {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 80%;
+	margin: auto;
 }
 
-body>div>div:nth-of-type(2)>div>input {
-    width: 70%;
-    padding: 2rem;
-    margin: auto;
-    font-size: 14pt;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px 5px rgb(0, 0, 0, 0.1)
+body>div>div:nth-of-type(2)>div>span>img {
+	width: 2.5%;
+	padding-right: 5rem;
 }
 
-@media (max-width: 992px) {
-    .sidebar {
-        visibility: hidden;
-        display: none;
-    }
-}   
+body>div>div:nth-of-type(2)>div:nth-of-type(4) {
+	position: fixed;
+	width: 80%;
+	bottom: 0; 
+}
+
+body>div>div:nth-of-type(2)>div:nth-of-type(4)>div {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	padding: 2rem;
+	margin: auto;
+}
+
+body>div>div:nth-of-type(2)>div:nth-of-type(4)>div>span {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 15%;
+	padding: 1rem;
+	border: 1px solid lightgrey;
+	border-radius: 10px;
+}
+
+body>div>div:nth-of-type(2)>div:nth-of-type(4)>div>span>img {
+	width: 20%;
+	padding-right: 0.5rem;
+}
+
+body>div>div:nth-of-type(2)>div:nth-of-type(4)>div>span:nth-of-type(2) {
+	width: 90%;
+	padding: 2rem;
+	margin-top: 2rem;
+	border: none;
+	border-radius: 10px;
+	box-shadow: 0px 5px 10px 5px rgb(0, 0, 0, 0.5);
+	font-size: 14pt;
+}
+
+body>div>div:nth-of-type(2)>div:nth-of-type(4)>div>span:nth-of-type(2)>img {
+	width: 5%;
+	padding-left: 30rem;
+}
