--- a/Esami/Esame_2023_09_07/Esercizio2.css
+++ b/Esami/Esame_2023_09_07/Esercizio2.css
@@ -1,207 +1,201 @@
 body, html {
 	width: 100vw;
 	height: 100vh;
-	margin: 0;
 	padding: 0;
-	overflow-x: hidden;
-	overflow-y: hidden;
+	margin: 0;
 	font-family: sans-serif;
 }
 
 body>div {
-	position: relative;
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	height: 100%;
+	display: grid;
+	grid-template-columns: 20% 80%;
+	grid-template-rows: 1fr;
+	gap: 0 !important;
 }
 
 body>div>div:nth-of-type(1) {
-	width: 20%;
-	min-height: 100%;
-	padding: 1rem;
+	position: relative;
+	width: 100%;
+	height: 100vh;
 	color: white;
 	background-color: black;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(1) {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
-	width: 100%;
-	gap: 1rem;
+	width: 90%;
+	padding: 1rem;
+	margin-top: 0.25rem;
+	gap: 0.25rem;
+}
+
+body>div>div:nth-of-type(1)>div:nth-of-type(1)>span {
+	padding: 1rem;
+	border: 2px solid grey;
+	border-radius: 5px;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(1) {
-	width: 80%;
-	padding: 1rem;
-	border-radius: 5px;
-	border: 2px solid lightgrey;
-	overflow-y: scrollable;
+	width: 90%;
+	font-size: 16pt;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(2) {
 	width: 10%;
-	padding: 0.75rem;
-	border-radius: 5px;
-	border: 2px solid lightgrey;
 }
 
-body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(2)>img {
-	width: 75%;
-	height: 75%;
-	filter: invert(100%);
+body>div>div:nth-of-type(1)>div:nth-of-type(1)>span>img {
+	width: 90%;
+	filter: invert(1);
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(2) {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	margin: 1rem 0rem 0rem 1rem;
 	gap: 1rem;
-	padding: 2rem;
-	font-size: 14pt;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(2)>span {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 	width: 100%;
-	gap: 1rem;
+	margin-top: 0.25rem;
+	gap: 0.5rem;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(2)>span>img {
-	width: 7.5%;
-	filter: invert(100%);
+	width: 10%;
+	filter: invert(1);
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(3) {
 	position: absolute;
-	width: 100%;
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	bottom: 0px;
+	margin: 1rem 0rem 0rem 1rem;
 	padding: 1rem;
-	font-size: 14pt;
-	bottom: 0;
-	border-top; 2px solid grey;
+	gap: 1rem;
+	border-top: 1px solid grey;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(3)>span {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 	width: 100%;
-	margin-top: 1rem;
-}
-
-body>div>div:nth-of-type(1)>div:nth-of-type(3)>span>img {
-	width: 2%;
-	padding-right: 1rem;
-	filter: invert(100%);
+	margin-top: 0.25rem;
+	gap: 0.5rem;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(3)>span:nth-of-type(2) {
 	padding-left: 1rem;
 }
 
+body>div>div:nth-of-type(1)>div:nth-of-type(3)>span>img {
+	width: 10%;
+	filter: invert(1);
+}
+
 body>div>div:nth-of-type(2) {
-	width: 80%;
-	height: 100%;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(1) {
-	width: 100%;
-	padding: 2rem;
-	background-color: white;
-	border-bottom: 1px solid lightgrey;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(1)>span {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	width: 80%;
-	margin: auto;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(1)>span>img {
-	width: 2.5%;
-	padding-left: 5rem;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(2) {
-	width: 100%;
-	padding: 2rem;
-	background-color: white;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(2)>span {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	width: 80%;
-	margin: auto;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(3) {
-	width: 100%;
-	padding: 2rem;
-	background-color: lightgrey;
-	opacity: 0.8;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(3)>span {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	width: 80%;
-	margin: auto;
-}
-
-body>div>div:nth-of-type(2)>div>span>img {
-	width: 2.5%;
-	padding-right: 5rem;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(4) {
-	position: fixed;
-	width: 80%;
-	bottom: 0; 
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(4)>div {
+	position: relative;
 	display: flex;
 	flex-direction: column;
-	width: 50%;
-	padding: 2rem;
-	margin: auto;
+	width: 100%;
+	height: 100vh;
 }
 
-body>div>div:nth-of-type(2)>div:nth-of-type(4)>div>span {
+body>div>div:nth-of-type(2)>p {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
-	width: 15%;
-	padding: 1rem;
-	border: 1px solid lightgrey;
-	border-radius: 10px;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(4)>div>span>img {
-	width: 20%;
-	padding-right: 0.5rem;
-}
-
-body>div>div:nth-of-type(2)>div:nth-of-type(4)>div>span:nth-of-type(2) {
-	width: 90%;
+	justify-content: center;
+	max-width: 100%;
 	padding: 2rem;
-	margin-top: 2rem;
-	border: none;
-	border-radius: 10px;
-	box-shadow: 0px 5px 10px 5px rgb(0, 0, 0, 0.5);
-	font-size: 14pt;
+	gap: 3rem;
+	margin: 0
 }
 
-body>div>div:nth-of-type(2)>div:nth-of-type(4)>div>span:nth-of-type(2)>img {
-	width: 5%;
-	padding-left: 30rem;
+
+
+body>div>div:nth-of-type(2)>p:nth-of-type(1) {
+	gap: 0 !important;
+	border-bottom: 1px solid grey;
+}	
+
+body>div>div:nth-of-type(2)>p:nth-of-type(1)>span {
+	text-align: center;
+	width: 100%;
+}	
+
+body>div>div:nth-of-type(2)>p:nth-of-type(1)>img {
+	width: 2.5%;
+	float: right;
 }
+
+body>div>div:nth-of-type(2)>p>span {
+	width: 100%;
+}
+
+body>div>div:nth-of-type(2)>p>img {
+	width: 2.5%;
+	float: left;
+	padding-left: 2rem;
+}
+
+body>div>div:nth-of-type(2)>p:nth-of-type(3) {
+	background-color: lightgrey;
+	opacity: 0.7;
+}
+
+body>div>div:nth-of-type(2)>div {
+	position: fixed;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 80%;
+	bottom: 0;
+	gap: 1rem;
+}
+
+body>div>div:nth-of-type(2)>div>div {
+	width: 82.5%;
+}
+
+body>div>div:nth-of-type(2)>div>div>span {
+	display: flex;
+	float: right;
+	align-items: center;
+	width: 10%;
+	padding: 1rem;
+	gap: 1rem;
+	background-color: white;
+	border-radius: 5px;
+	box-shadow: 0px 2.5px 5px 2.5px rgb(0, 0, 0, 0.2);
+}
+
+body>div>div:nth-of-type(2)>div>div>span>img {
+	width: 15%;
+}
+
+body>div>div:nth-of-type(2)>div>input {
+	width: 80%;
+	padding: 1.5rem;
+	margin: auto;
+	font-size: 14pt;
+	border: none !important;
+	border-radius: 5px;
+	box-shadow: 0px 2.5px 5px 2.5px rgb(0, 0, 0, 0.2);
+}
+
+body>div>div:nth-of-type(2)>div>p {
+	text-align: center;
+	width: 100%;
+}
+
+
+
+
+
