--- a/Esami/Esame_2022_02_10/Esercizio2.css
+++ b/Esami/Esame_2022_02_10/Esercizio2.css
@@ -1,101 +1,115 @@
-html {
-    max-width: 100vw;
-    max-height: 100vh;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-}
-
 body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+	width: 100vw;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	overflow-x: hidden;
 }
 
-body>nav {
-    position: fixed;
-    display: flex;
-    width: 100%;
-    height: auto;
-    padding: 0.25rem;
-    gap: 0.25rem;
-    color: white;
-    background-color: rgb(0, 0, 0, 0.7);
+body>div {
+	position: relative;
+	width: 100%;
 }
 
-img {
-    width: 50px;
-    height: 25px;
-    margin-top: auto;
-    margin-bottom: auto;
+body>div>nav {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	top: 0;	
+	padding: 1rem;
+	gap: 1rem;
+	color: white;
+	background-color: rgb(0,0,0,0.75);
 }
 
-body>div:nth-of-type(1) {
-    width: 100%;
-    padding-top: 3rem;
-    padding-left: 0.5rem;
+body>div>nav>img {
+	border: 1px solid white;
 }
 
-h1 {
-    padding: 0.25rem;
-    border-bottom: 2px solid black;
+body>div>h2 {
+	width: 100%;
+	padding: 1rem;
+	border-bottom: 2px solid black;
+	padding-top: 3rem;
 }
 
 body>div:nth-of-type(2) {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    padding-left: 0.5rem
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 1rem;
 }
 
 body>div:nth-of-type(2)>div:nth-of-type(1) {
-    grid-column: 1 / span 2;
+	grid-column: 1 / span 2;
 }
 
-body>div:nth-of-type(2)>div:nth-of-type(1)>div {
-    padding: 0.5rem;
-    border-bottom: 1px solid grey;
+body>div:nth-of-type(2)>div:nth-of-type(1)>p {
+	display: flex;
+	flex-direction: column;
+	padding: 1rem;
+	border-bottom: 1px solid lightgrey;
+	gap: 1.5rem;
 }
 
-body>div:nth-of-type(2)>div:nth-of-type(1)>div>span {
-    font-size: 12pt;
-    color: grey;
+body>div:nth-of-type(2)>div:nth-of-type(1)>p>span:nth-of-type(1) {
+	color: grey;
+}
+
+body>div:nth-of-type(2)>div:nth-of-type(1)>p>span:nth-of-type(2) {	
+	width: 75%;
+	font-weight: bold;
+	color: blue;
+}
+
+body>div:nth-of-type(2)>div:nth-of-type(2) {	
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+	border-left: 1px solid lightgrey;
+}
+
+body>div:nth-of-type(2)>div:nth-of-type(2)>p {
+	display: flex;
+	flex-direction: column;	
+	width: 75%;
+	margin: auto;	
+	padding: 1rem;
+	gap: 2rem;
+	background-color: lightgrey;
+	border: 2px solid lightblue;
+}
+
+body>div:nth-of-type(2)>div:nth-of-type(2)>p>span:nth-of-type(1) {
+	font-size: 14pt;
+	font-weight: bold;
+	color: blue;
+}
+
+body>div:nth-of-type(2)>div:nth-of-type(2)>p>span:nth-of-type(2) {
+	font-size: 13pt;
+	color: grey;
 }
 
 a {
-    text-decoration: none !important;
+	text-decoration: none;
+	padding-left: 1rem;
+	font-weight: bold;
+	color: blue;
 }
 
-body>div:nth-of-type(2)>div:nth-of-type(1)>div>a>p {
-    font-size: 16pt;
-    font-weight: bold;
-}
 
-body>div:nth-of-type(2)>div:nth-of-type(2) {
-    grid-column: 3;
-    padding: 1rem;
-    border-left: 1px solid grey;
-}
 
-body>div:nth-of-type(2)>div:nth-of-type(2)>a>div {
-    background-color: rgb(173, 216, 230, 0.5);
-    border: 2px solid grey;
-    padding: 1rem;
-    margin-top: 2rem;
-}
 
-h2 {
-    color: blue;
-}
 
-body>div:nth-of-type(2)>div:nth-of-type(2)>a>div>p {
-    font-size: 14pt;
-    color: grey;
-}
 
-body>div:nth-of-type(2)>p {
-    font-size: 14pt;
-    font-weight: bold;
-    color: blue;
-}
+
+
+
+
+
+
+
+
+
