--- a/Esami/Esame_2024_05_28/turno_2/Esercizio1.css
+++ b/Esami/Esame_2024_05_28/turno_2/Esercizio1.css
@@ -1,102 +1,85 @@
-body, html {
+body {
 	width: 100vw;
-	height: 100vh;
-	padding: 0;
 	margin: 0;
+	padding: 0;
 	font-family: sans-serif;
+	overflow-x: hidden;
 }
 
 body>div {
-	display: flex;
-	flex-direction: column;
 	width: 100%;
+	margin: 1rem;
 }
 
-body>nav {
+body>div>nav {
 	display: flex;
-	flex-direction: row;
 	width: 80%;
-	padding: 1rem;
 }
 
-body>nav>span:nth-of-type(1) {
-	color: black;
+body>div>nav>span {
+	padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+	font-weight: bold;
+	border-bottom: 3px solid lightgrey;
+}
+
+body>div>nav>span:hover {
 	border-bottom: 3px solid blue;
 }
 
-body>nav>span {
-	padding: 1rem 1.5rem 1rem 1.5rem;
-	color: grey;
-	font-weight: bold;
-	border-bottom: 2px solid lightgrey;
-}
-
-body>div {
+body>div>div {
 	display: grid;
-	grid-template-columns: 10% 60% 25%;
-	gap: 2rem;
+	grid-template-columns: 10% 65% 25%;
 }
 
-body>div>div:nth-of-type(1) {
+body>div>div>div:nth-of-type(1) {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	padding-top: 1.5rem;
-	gap: 0.5rem;
+	padding: 1rem;
 }
 
-body>div>div:nth-of-type(1)>span {
-	width: 70%;
-	border: 1px solid grey;
-}
-
-body>div>div:nth-of-type(1)>span>img {
+body>div>div>div:nth-of-type(1)>span>img {
 	width: 100%;
 }
 
-body>div>div:nth-of-type(1)>span>img:hover {
-	opacity: 0.5;
+body>div>div>div:nth-of-type(1)>span:hover {
+	border: 2px solid black;
 }
 
-body>div>div:nth-of-type(2) {
+body>div>div>div:nth-of-type(1)>span>img:hover {
+	filter: brightness(0.75);	
+}
+
+body>div>div>div:nth-of-type(2) {
 	width: 100%;
+	text-align: center;
 }
 
-body>div>div:nth-of-type(2)>img {
-	width: 100%;
+body>div>div>div:nth-of-type(2)>img {
+	width: 75%;
 }
 
-body>div>div:nth-of-type(3) {
+body>div>div>div:nth-of-type(3)>p {
 	display: flex;
 	flex-direction: column;
-	width: 100%;
-	padding-top: 1.5rem;
-	gap: 0.5rem;
+	width: 75%;
+	gap: 0.75rem;
 }
 
-body>div>div:nth-of-type(3)>span:nth-of-type(1) {
+body>div>div>div:nth-of-type(3)>p>span:nth-of-type(1) {
+	font-size: 14pt;
+	font-weight: bold;
+}
+
+body>div>div>div:nth-of-type(3)>p>span:nth-of-type(2) {
+	font-weight: bold;
 	color: orange;
-	font-weight: bold;
 }
 
-body>div>div:nth-of-type(3)>span:nth-of-type(2) {
-	font-weight: bold;
-}
-
-body>div>div:nth-of-type(3)>span:nth-of-type(3) {
-	color: grey;
-}
-
-body>div>div:nth-of-type(3)>span:nth-of-type(4) {
+body>div>div>div:nth-of-type(3)>p>span:nth-of-type(3) {
 	display: flex;
 	font-weight: bold;
 }
 
-body>div>div:nth-of-type(3)>span:nth-of-type(4)>span {
-	font-size: 20pt;
-}
-
-body>div>div:nth-of-type(3)>span:nth-of-type(5) {
-	width: 60%;
+body>div>div>div:nth-of-type(3)>p>span:nth-of-type(3)>span {
+	font-size: 18pt;
 }
